# opinion-trader-cli

./: .gitignore  README.md  __init__.py  build.py  install.sh  logs.sh  opinion-trader.spec  orderbook_manager.py  pyproject.toml  requirements.txt  run.sh  run_background.sh  services.py  status.sh  stop.sh  trade.py
.github/workflows/: build.yml
archive/: display.py  main.py  models.py  trade_enhanced.py  websocket_client.py
docs/: DEVELOPMENT.md  使用说明.md
scripts/: install.sh  logs.sh  run.sh  run_background.sh  status.sh  stop.sh
src/opinion_trader/: __init__.py  __main__.py  app.py
src/opinion_trader/config/: __init__.py  loader.py  models.py
src/opinion_trader/core/: __init__.py  enhanced.py  trader.py
src/opinion_trader/core/strategies/: __init__.py
src/opinion_trader/display/: __init__.py  order.py  orderbook.py  position.py  progress.py  table.py
src/opinion_trader/services/: __init__.py  account.py  market.py  order.py  orderbook.py  orderbook_manager.py  position.py  services.py
src/opinion_trader/ui/: __init__.py  console.py  menus.py  prompts.py  tables.py
src/opinion_trader/utils/: __init__.py  confirmation.py  console.py  daemon.py  helpers.py
src/opinion_trader/wallet/: README.md  wallet.py
src/opinion_trader/websocket/: __init__.py  client.py  monitor.py
